--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
-
 * {
   box-sizing: border-box;
 }
+
 body {
   color: #2b2c48;
   font-family: "Jost", sans-serif;
   background-image: url(https://images.unsplash.com/photo-1566738780863-f9608f88f3a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2378&q=80);
-
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -25,7 +24,7 @@ body {
   position: relative;
   z-index: 1;
   overflow-x: hidden;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: white;
   display: flex;
   transition: 0.3s;
   flex-direction: column;
@@ -35,9 +34,9 @@ body {
 
 .card[data-state="#about"] {
   height: 450px;
-  .card-main {
-    padding-top: 0;
-  }
+}
+.card[data-state="#about"] .card-main {
+  padding-top: 0;
 }
 
 .card[data-state="#contact"] {
@@ -48,40 +47,33 @@ body {
   height: 550px;
 }
 
-.card.is-active {
-  .card-header {
-    height: 80px;
-  }
-
-  .card-cover {
-    height: 100px;
-    top: -50px;
-  }
-
-  .card-avatar {
-    transform: none;
-    left: 20px;
-    width: 50px;
-    height: 50px;
-    bottom: 10px;
-  }
-
-  .card-fullname,
-  .card-jobtitle {
-    left: 86px;
-    transform: none;
-  }
-
-  .card-fullname {
-    bottom: 18px;
-    font-size: 19px;
-  }
-
-  .card-jobtitle {
-    bottom: 16px;
-    letter-spacing: 1px;
-    font-size: 10px;
-  }
+.card.is-active .card-header {
+  height: 80px;
+}
+.card.is-active .card-cover {
+  height: 100px;
+  top: -50px;
+}
+.card.is-active .card-avatar {
+  transform: none;
+  left: 20px;
+  width: 50px;
+  height: 50px;
+  bottom: 10px;
+}
+.card.is-active .card-fullname,
+.card.is-active .card-jobtitle {
+  left: 86px;
+  transform: none;
+}
+.card.is-active .card-fullname {
+  bottom: 18px;
+  font-size: 19px;
+}
+.card.is-active .card-jobtitle {
+  bottom: 16px;
+  letter-spacing: 1px;
+  font-size: 10px;
 }
 
 .card-header {
@@ -91,10 +83,9 @@ body {
   flex-shrink: 0;
   width: 100%;
   transition: 0.3s;
-
-  * {
-    transition: 0.3s;
-  }
+}
+.card-header * {
+  transition: 0.3s;
 }
 
 .card-cover {
@@ -182,35 +173,31 @@ body {
   align-items: center;
   padding: 0 20px;
   margin-bottom: 30px;
-  svg {
-    fill: rgb(165, 181, 206);
-    width: 16px;
-    display: block;
-    transition: 0.3s;
-  }
-  a {
-    color: #8797a1;
-    height: 32px;
-    width: 32px;
-    border-radius: 50%;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    transition: 0.3s;
-    background-color: rgba(93, 133, 193, 0.05);
-    border-radius: 50%;
-    margin-right: 10px;
-
-    &:hover {
-      svg {
-        fill: darken(rgb(165, 181, 206), 20%);
-      }
-    }
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+}
+.card-social svg {
+  fill: #a5b5ce;
+  width: 16px;
+  display: block;
+  transition: 0.3s;
+}
+.card-social a {
+  color: #8797a1;
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+  background-color: rgba(93, 133, 193, 0.05);
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.card-social a:hover svg {
+  fill: #637faa;
+}
+.card-social a:last-child {
+  margin-right: 0;
 }
 
 .card-buttons {
@@ -220,42 +207,40 @@ body {
   position: sticky;
   bottom: 0;
   left: 0;
-
-  button {
-    flex: 1 1 auto;
-    user-select: none;
-    background: 0;
-    font-size: 13px;
-    border: 0;
-    padding: 15px 5px;
-    cursor: pointer;
-    color: #5c5c6d;
-    transition: 0.3s;
-    font-family: "Jost", sans-serif;
-    font-weight: 500;
-    outline: 0;
-    border-bottom: 3px solid transparent;
-
-    &.is-active,
-    &:hover {
-      color: #2b2c48;
-      border-bottom: 3px solid #8a84ff;
-      background: linear-gradient(
-        to bottom,
-        rgba(127, 199, 231, 0) 0%,
-        rgba(207, 204, 255, 0.2) 44%,
-        rgba(211, 226, 255, 0.4) 100%
-      );
-    }
-  }
+}
+.card-buttons button {
+  flex: 1 1 auto;
+  user-select: none;
+  background: 0;
+  font-size: 13px;
+  border: 0;
+  padding: 15px 5px;
+  cursor: pointer;
+  color: #5c5c6d;
+  transition: 0.3s;
+  font-family: "Jost", sans-serif;
+  font-weight: 500;
+  outline: 0;
+  border-bottom: 3px solid transparent;
+}
+.card-buttons button.is-active,
+.card-buttons button:hover {
+  color: #2b2c48;
+  border-bottom: 3px solid #8a84ff;
+  background: linear-gradient(
+    to bottom,
+    rgba(127, 199, 231, 0) 0%,
+    rgba(207, 204, 255, 0.2) 44%,
+    rgba(211, 226, 255, 0.4) 100%
+  );
 }
 
 .card-section {
   display: none;
-  &.is-active {
-    display: block;
-    animation: fadeIn 0.6s both;
-  }
+}
+.card-section.is-active {
+  display: block;
+  animation: fadeIn 0.6s both;
 }
 
 @keyframes fadeIn {
@@ -267,24 +252,19 @@ body {
     opacity: 1;
   }
 }
-
 .card-timeline {
   margin-top: 30px;
   position: relative;
-  &:after {
-    background: linear-gradient(
-      to top,
-      rgba(134, 214, 243, 0) 0%,
-      rgba(81, 106, 204, 1) 100%
-    );
-    content: "";
-    left: 42px;
-    width: 2px;
-    top: 0;
-    height: 100%;
-    position: absolute;
-    content: "";
-  }
+}
+.card-timeline:after {
+  background: linear-gradient(to top, rgba(134, 214, 243, 0) 0%, #516acc 100%);
+  content: "";
+  left: 42px;
+  width: 2px;
+  top: 0;
+  height: 100%;
+  position: absolute;
+  content: "";
 }
 
 .card-item {
@@ -293,30 +273,25 @@ body {
   padding-right: 20px;
   padding-bottom: 30px;
   z-index: 1;
-  &:last-child {
-    padding-bottom: 5px;
-  }
-
-  &:after {
-    content: attr(data-year);
-    width: 10px;
-    position: absolute;
-    top: 0;
-    left: 37px;
-    width: 8px;
-    height: 8px;
-    line-height: 0.6;
-    border: 2px solid #fff;
-    font-size: 11px;
-    text-indent: -35px;
-    border-radius: 50%;
-    color: rgba(#868686, 0.7);
-    background: linear-gradient(
-      to bottom,
-      lighten(#516acc, 20%) 0%,
-      #516acc 100%
-    );
-  }
+}
+.card-item:last-child {
+  padding-bottom: 5px;
+}
+.card-item:after {
+  content: attr(data-year);
+  width: 10px;
+  position: absolute;
+  top: 0;
+  left: 37px;
+  width: 8px;
+  height: 8px;
+  line-height: 0.6;
+  border: 2px solid #fff;
+  font-size: 11px;
+  text-indent: -35px;
+  border-radius: 50%;
+  color: rgba(134, 134, 134, 0.7);
+  background: linear-gradient(to bottom, #a0aee3 0%, #516acc 100%);
 }
 
 .card-item-title {
@@ -344,20 +319,18 @@ body {
   font-family: "DM Sans", sans-serif;
   line-height: 1.6;
   cursor: pointer;
-
-  & + & {
-    margin-top: 16px;
-  }
-
-  svg {
-    flex-shrink: 0;
-    width: 30px;
-    min-height: 34px;
-    margin-right: 12px;
-    transition: 0.3s;
-    padding-right: 12px;
-    border-right: 1px solid #dfe2ec;
-  }
+}
+.card-contact + .card-contact {
+  margin-top: 16px;
+}
+.card-contact svg {
+  flex-shrink: 0;
+  width: 30px;
+  min-height: 34px;
+  margin-right: 12px;
+  transition: 0.3s;
+  padding-right: 12px;
+  border-right: 1px solid #dfe2ec;
 }
 
 .contact-me {
